objects/LBI__LatticeSyncBatchChunk__c.object
<CustomObject>
    <fields>
        <fullName>LBI__CalloutTime__c</fullName>
        <description>Time in milliseconds spent calling out</description>
        <inlineHelpText>Time in milliseconds spent calling out</inlineHelpText>
        <label>Callout Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__CountError__c</fullName>
        <label>Count Error</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__CountSuccess__c</fullName>
        <label>Count Success</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__ErrorMessage__c</fullName>
        <label>Error Message</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LBI__ExpectedRecords__c</fullName>
        <label>Expected Records</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__LatticeSyncBatchStep__c</fullName>
        <label>Sync Batch Step</label>
        <referenceTo>LBI__LatticeSyncBatchStep__c</referenceTo>
        <relationshipLabel>Lattice Sync Batch Chunks</relationshipLabel>
        <relationshipName>LatticeSyncBatchChunks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LBI__PageNumber__c</fullName>
        <label>Page Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__ProcessingEndTime__c</fullName>
        <label>Processing End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LBI__ProcessingStartTime__c</fullName>
        <label>Processing Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LBI__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                    <default>true</default>
                    <label>Queued</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Lattice Sync Batch Chunk</label>
    <listViews>
        <fullName>LBI__All</fullName>
        <columns>NAME</columns>
        <columns>LBI__Status__c</columns>
        <columns>LBI__CalloutTime__c</columns>
        <columns>LBI__CountError__c</columns>
        <columns>LBI__CountSuccess__c</columns>
        <columns>LBI__ExpectedRecords__c</columns>
        <columns>LBI__PageNumber__c</columns>
        <columns>LBI__ProcessingEndTime__c</columns>
        <columns>LBI__ProcessingStartTime__c</columns>
        <columns>LBI__LatticeSyncBatchStep__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SBC-{00000000}</displayFormat>
        <label>Sync Batch Chunk Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Sync Batch Chunks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>